Fix z-index.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5235,6 +5235,7 @@ img {
     -webkit-transform: scale(0);
             transform: scale(0);
     position: relative;
+    z-index: 190;
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -5251,7 +5252,7 @@ img {
       -webkit-transition-delay: .1s;
               transition-delay: .1s; }
     .tech-promo__circle:hover {
-      z-index: 30; }
+      z-index: 210; }
       .tech-promo__circle:hover .tech-promo__circle__arrow__self {
         -webkit-transition: all .3s;
         transition: all .3s;
@@ -5367,7 +5368,7 @@ img {
     -webkit-transform: scale(0);
             transform: scale(0);
     position: absolute;
-    z-index: 20;
+    z-index: 200;
     width: 20px;
     height: 20px;
     background: #fff;
