--- a/src/css/blocks/tech-promo.scss
+++ b/src/css/blocks/tech-promo.scss
@@ -141,6 +141,7 @@
 		transition: all .6s;
 		transform: scale(0);
 		position: relative;
+		z-index: 190;
 		width: 100%;
 		height: 100%;
 		border-radius: 50%;
@@ -161,7 +162,7 @@
 		}
 		
 		&:hover {
-			z-index: 30;
+			z-index: 210;
 
 			.tech-promo__circle__arrow__self {
 				transition: all .3s;
@@ -293,7 +294,7 @@
 		transition: transform .3s;
 		transform: scale(0);
 		position: absolute;
-		z-index: 20;
+		z-index: 200;
 		width: 20px;
 		height: 20px;
 		background: #fff;
